Add the new crosshair cursor style

Changing the style of the crosshair cursor to make it easier to
see.

BUG=730678

Change-Id: I9f2aca5461c3297743fd3635ace3a9261dc25a3b